--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -26,15 +26,17 @@
             android:layout_gravity="center">
             <ImageView
                 android:id="@+id/message_iv_reply"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:layout_centerHorizontal="true"
                 android:src="@mipmap/cansel"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:layout_below="@+id/message_iv_reply"
                 android:layout_centerHorizontal="true"
+                android:textSize="13sp"
                 android:text="回复我的"/>
         </RelativeLayout>
         <RelativeLayout
@@ -45,15 +47,17 @@
             android:layout_gravity="center">
             <ImageView
                 android:id="@+id/message_iv_like"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:layout_centerHorizontal="true"
                 android:src="@mipmap/cansel"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:layout_below="@+id/message_iv_like"
                 android:layout_centerHorizontal="true"
+                android:textSize="13sp"
                 android:text="收到的赞"/>
         </RelativeLayout>
         <RelativeLayout
@@ -63,16 +67,39 @@
             android:padding="10dp"
             android:layout_gravity="center">
             <ImageView
-                android:id="@+id/message_iv_inform"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
+                android:id="@+id/message_iv_pay"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:layout_centerHorizontal="true"
                 android:src="@mipmap/cansel"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_below="@+id/message_iv_pay"
+                android:layout_centerHorizontal="true"
+                android:textSize="13sp"
+                android:text="支付消息"/>
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_height="100dp"
+            android:layout_weight="1"
+            android:padding="10dp"
+            android:layout_gravity="center">
+            <ImageView
+                android:id="@+id/message_iv_inform"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_centerHorizontal="true"
+                android:src="@mipmap/cansel"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:layout_below="@+id/message_iv_inform"
                 android:layout_centerHorizontal="true"
+                android:textSize="13sp"
                 android:text="系统通知"/>
         </RelativeLayout>
     </LinearLayout>
@@ -93,7 +120,7 @@
         android:paddingTop="5dp"
         android:paddingLeft="20dp"
         android:paddingBottom="5dp"
-        android:textSize="16sp"
+        android:textSize="15sp"
         android:text="聊天列表"/>
 
     <View
