--- a/app/src/main/res/drawable/border_search.xml
+++ b/app/src/main/res/drawable/border_search.xml
@@ -8,5 +8,5 @@
         android:color="#FC5757" />-->
     <stroke
         android:width="1dp"
-        android:color="#57FC96" />
+        android:color="#4CAF50" />
 </shape>
