--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -78,7 +78,7 @@
             android:background="#49DA9C"
             android:clickable="true"
             android:gravity="center"
-            android:text="付款"
+            android:text="结算"
             android:textColor="#FAFAFA" />
     </LinearLayout>
 </RelativeLayout>
