--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -24,12 +24,14 @@
             <!--广告位-->
             <androidx.cardview.widget.CardView
                 android:id="@+id/discover_ad"
-                android:layout_width="330dp"
+                android:layout_width="match_parent"
                 android:layout_height="60dp"
                 app:cardElevation="5dp"
                 app:cardCornerRadius="20dp"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="50dp">
+                android:layout_marginTop="50dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp">
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -95,7 +97,7 @@
                             android:layout_height="wrap_content"
                             android:textSize="15sp"
                             android:gravity="center"
-                            android:text="资料"/>
+                            android:text="益智游戏"/>
                     </LinearLayout>
                     <LinearLayout
                         android:layout_width="wrap_content"
@@ -189,7 +191,7 @@
                             android:layout_height="wrap_content"
                             android:textSize="15sp"
                             android:gravity="center"
-                            android:text="酒店"/>
+                            android:text="图书"/>
                     </LinearLayout>
                     <LinearLayout
                         android:layout_width="wrap_content"
@@ -401,14 +403,15 @@
 
         <!--搜索框-->
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:paddingLeft="5dp"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:elevation="3dp">
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="35dp"
                 android:background="@drawable/border_search"
                 android:elevation="1dp"
