--- a/app/src/main/res/layout/layout_input.xml
+++ b/app/src/main/res/layout/layout_input.xml
@@ -67,20 +67,12 @@
                 android:layout_weight="1"
                 android:layout_marginLeft="10dip"
                 android:background="#00000000"
-                android:hint="请输入验证码"
+                android:hint="请输入密码"
                 android:textColor="#CCFFFFFF"
                 android:textColorHint="#88FFFFFF"
                 android:inputType="textPassword"
                 android:padding="5dip"
                 android:textSize="16sp" />
-            <TextView
-                android:id="@+id/login_tv_phcode"
-                android:layout_width="100dp"
-                android:layout_height="35dp"
-                android:layout_marginLeft="10dp"
-                android:gravity="center"
-                android:text="发送验证码"
-                android:textColor="#ffffff"/>
         </LinearLayout>
     </LinearLayout>
 
