--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -14,6 +14,7 @@
         android:id="@+id/cart_rv_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@id/cart_tit"
         android:layout_marginBottom="50dp"/>
 
     <LinearLayout
