--- a/app/src/main/res/layout/activity_person.xml
+++ b/app/src/main/res/layout/activity_person.xml
@@ -82,7 +82,7 @@
             android:layout_weight="1"
             android:gravity="center"
             android:textSize="18sp"
-            android:text="动态"/>
+            android:text="社交圈"/>
         <TextView
             android:id="@+id/person_tv_video"
             android:layout_width="0dp"
