--- a/app/src/main/res/layout/activity_control.xml
+++ b/app/src/main/res/layout/activity_control.xml
@@ -86,6 +86,7 @@
                         android:layout_height="match_parent"
                         android:paddingLeft="20dp"
                         android:paddingRight="20dp"
+                        android:layout_marginBottom="10dp"
                         android:orientation="horizontal">
                         <TextView
                             android:layout_width="wrap_content"
@@ -142,7 +143,7 @@
                             android:layout_marginLeft="5dp"
                             android:textSize="16sp"
                             android:textColor="#404040"
-                            android:text="电话拨打时间"/>
+                            android:text="互帮互学时间"/>
                     </LinearLayout>
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -170,6 +171,7 @@
                         android:layout_height="match_parent"
                         android:paddingLeft="20dp"
                         android:paddingRight="20dp"
+                        android:layout_marginBottom="10dp"
                         android:orientation="horizontal">
                         <TextView
                             android:layout_width="wrap_content"
