--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    android:background="@drawable/gradient_bg_regist">
+    android:background="@drawable/gradient_bg_regist"
+    tools:context=".LoginRegist.InfoActivity">
 
     <ImageView
         android:id="@+id/info_iv_back"
