--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -61,11 +61,46 @@
             layout="@layout/layout_progress"
             android:visibility="gone" />
 
+        <LinearLayout
+            android:id="@+id/login_ll1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/login_ll_input"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal">
+            <CheckBox
+                android:id="@+id/login_cb_aotologin"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#FFFFFF"
+                android:textSize="14sp"
+                android:layout_alignRight="@+id/login_tv_split"
+                android:text="自动登录" />
+            <TextView
+                android:id="@+id/login_tv_split1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#4CAF50"
+                android:textSize="14sp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp"
+                android:text="|"/>
+            <CheckBox
+                android:id="@+id/login_cb_rempsw"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#FFFFFF"
+                android:textSize="14sp"
+                android:layout_alignRight="@+id/login_tv_split"
+                android:text="记住密码" />
+        </LinearLayout>
+
         <Button
             android:id="@+id/login_btn_login"
             android:layout_width="100dp"
             android:layout_height="40dp"
-            android:layout_below="@+id/login_ll_input"
+            android:layout_below="@+id/login_ll1"
             android:layout_centerInParent="true"
             android:layout_marginTop="15dip"
             android:background="@drawable/border_btn_background"
@@ -90,6 +125,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#FFFFFF"
+                android:textSize="14sp"
                 android:layout_alignRight="@+id/login_tv_split"
                 android:text="注册账号"/>
             <TextView
@@ -97,6 +133,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#4CAF50"
+                android:textSize="14sp"
                 android:layout_centerHorizontal="true"
                 android:layout_marginRight="10dp"
                 android:layout_marginLeft="10dp"
@@ -106,6 +143,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#FFFFFF"
+                android:textSize="14sp"
                 android:layout_alignLeft="@+id/login_tv_split"
                 android:text="忘记密码"/>
         </LinearLayout>
