--- a/app/src/main/res/layout/activity_person.xml
+++ b/app/src/main/res/layout/activity_person.xml
@@ -51,21 +51,10 @@
         android:id="@+id/publish_tv_school"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="浙江省杭州市学军小学"
+        android:text="浙江省杭州市 四年级"
         android:maxLines="1"
         android:layout_below="@id/publish_tv_name"
         android:layout_toRightOf="@id/person_cd"
-        android:textSize="14sp"
-        android:textColor="#404040"/>
-
-    <TextView
-        android:id="@+id/publish_tv_grade"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="四年级"
-        android:layout_marginLeft="10dp"
-        android:layout_below="@id/publish_tv_name"
-        android:layout_toRightOf="@id/publish_tv_school"
         android:textSize="14sp"
         android:textColor="#404040"/>
 
