--- a/app/src/main/res/layout/activity_private.xml
+++ b/app/src/main/res/layout/activity_private.xml
@@ -25,6 +25,7 @@
             android:layout_marginLeft="10dp"
             android:textSize="16sp"/>
         <com.xuexiang.xui.widget.button.switchbutton.SwitchButton
+            android:id="@+id/private_sb_friend"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
@@ -119,6 +120,7 @@
             android:layout_marginLeft="10dp"
             android:textSize="16sp"/>
         <com.xuexiang.xui.widget.button.switchbutton.SwitchButton
+            android:id="@+id/private_sb_allow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
