--- a/app/src/main/res/layout/activity_remeber.xml
+++ b/app/src/main/res/layout/activity_remeber.xml
@@ -5,12 +5,239 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    android:background="@drawable/gradient_bg_regist"
     tools:context=".LoginRegist.RemeberActivity">
+
+    <ImageView
+        android:id="@+id/rem_iv_back"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_margin="10dp"/>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:src="@mipmap/img10"
+        android:adjustViewBounds="true"/>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/rem_rl_main"
+        android:layout_marginBottom="20dp"
+        android:orientation="vertical" >
+        <ImageView
+            android:id="@+id/rem_iv_logo"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:adjustViewBounds="true"
+            android:layout_centerHorizontal="true"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dip"
+            android:gravity="center"
+            android:text="LEARNING MACHINE"
+            android:textColor="#ffffff"
+            android:textSize="24sp" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="CARING FOR YOUR CHILD"
+            android:textColor="#ffffff"
+            android:alpha="0.7"
+            android:textSize="16sp" />
+    </LinearLayout>
+
+    <RelativeLayout
+        android:id="@+id/rem_rl_main"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true">
+        <LinearLayout
+            android:id="@+id/rem_ll_input"
+            android:layout_width="360dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dip"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/border_et_background"
+            android:orientation="vertical"
+            android:padding="10dip" >
+            <LinearLayout
+                android:id="@+id/rem_layout_phone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:orientation="horizontal" >
+                <ImageView
+                    android:id="@+id/rem_iv_phone"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_gravity="center_vertical"/>
+                <EditText
+                    android:id="@+id/rem_et_phone"
+                    android:layout_width="match_parent"
+                    android:layout_height="35dp"
+                    android:background="@null"
+                    android:hint="请输入手机号码"
+                    android:maxLines="1"
+                    android:textColor="#CCFFFFFF"
+                    android:inputType="number"
+                    android:textColorHint="#88FFFFFF"
+                    android:layout_marginLeft="10dip"
+                    android:padding="5dip"
+                    android:textSize="16sp" />
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1px"
+                android:layout_marginBottom="5dip"
+                android:layout_marginTop="5dip"
+                android:background="#EFF9ED" />
+
+            <LinearLayout
+                android:id="@+id/rem_layout_code"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:orientation="horizontal" >
+                <ImageView
+                    android:id="@+id/rem_iv_code"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_gravity="center_vertical"/>
+                <EditText
+                    android:id="@+id/rem_et_code"
+                    android:layout_width="0dp"
+                    android:layout_height="35dp"
+                    android:layout_weight="1"
+                    android:layout_marginLeft="10dip"
+                    android:background="#00000000"
+                    android:hint="请输入验证码"
+                    android:textColor="#CCFFFFFF"
+                    android:textColorHint="#88FFFFFF"
+                    android:padding="5dip"
+                    android:textSize="16sp" />
+                <TextView
+                    android:id="@+id/rem_tv_phcode"
+                    android:layout_width="100dp"
+                    android:layout_height="35dp"
+                    android:layout_marginLeft="10dp"
+                    android:gravity="center"
+                    android:text="发送验证码"
+                    android:textColor="#ffffff"/>
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1px"
+                android:layout_marginBottom="5dip"
+                android:layout_marginTop="5dip"
+                android:background="#EFF9ED" />
+
+            <LinearLayout
+                android:id="@+id/rem_layout_psw"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:orientation="horizontal" >
+                <ImageView
+                    android:id="@+id/rem_iv_password"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_gravity="center_vertical"/>
+                <EditText
+                    android:id="@+id/rem_et_password"
+                    android:layout_width="match_parent"
+                    android:layout_height="35dp"
+                    android:layout_marginLeft="10dip"
+                    android:background="#00000000"
+                    android:hint="请输入新密码"
+                    android:textColor="#CCFFFFFF"
+                    android:textColorHint="#88FFFFFF"
+                    android:inputType="textPassword"
+                    android:padding="5dip"
+                    android:textSize="16sp" />
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1px"
+                android:layout_marginBottom="5dip"
+                android:layout_marginTop="5dip"
+                android:background="#EFF9ED" />
+
+            <LinearLayout
+                android:id="@+id/rem_layout_repsw"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:orientation="horizontal" >
+                <ImageView
+                    android:id="@+id/rem_iv_repassword"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_gravity="center_vertical"/>
+
+                <EditText
+                    android:id="@+id/rem_et_repassword"
+                    android:layout_width="match_parent"
+                    android:layout_height="35dp"
+                    android:layout_marginLeft="10dip"
+                    android:background="#00000000"
+                    android:hint="请再次输入新密码"
+                    android:inputType="textPassword"
+                    android:padding="5dip"
+                    android:textColor="#CCFFFFFF"
+                    android:textColorHint="#88FFFFFF"
+                    android:textSize="16sp" />
+            </LinearLayout>
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/rem_btn_reg"
+            android:layout_width="100dp"
+            android:layout_height="40dp"
+            android:layout_below="@+id/rem_ll_input"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="15dip"
+            android:background="@drawable/border_btn_background"
+            android:gravity="center"
+            android:paddingBottom="2dip"
+            android:paddingLeft="15dip"
+            android:paddingRight="15dip"
+            android:paddingTop="2dip"
+            android:text="确定"
+            android:textColor="#ffffff"
+            android:textSize="20sp" />
+    </RelativeLayout>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:adjustViewBounds="true"
+        android:alpha="0.7"
+        android:layout_alignParentBottom="true"
+        android:background="@mipmap/img9"/>
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="这是忘记密码的界面"
-        android:gravity="center"/>
+        android:layout_height="wrap_content"
+        android:text="登陆即代表阅读并同意服务条款。"
+        android:textColor="#FFFFFF"
+        android:textSize="12sp"
+        android:layout_centerHorizontal="true"
+        android:gravity="center_horizontal"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="10dp"/>
 
 </RelativeLayout>
