--- a/app/src/main/res/layout/scan.xml
+++ b/app/src/main/res/layout/scan.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    android:background="@drawable/gradient_background">
+    android:background="@drawable/gradient_background"
+    tools:context=".LoginRegist.scan">
 
     <ImageView
         android:id="@+id/scan_iv_back"
@@ -15,10 +16,9 @@
         android:layout_margin="10dp"/>
 
     <LinearLayout
-        android:id="@+id/scan_ll_logo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="150dp"
+        android:layout_above="@+id/scan_btn"
         android:layout_marginBottom="20dp"
         android:orientation="vertical" >
         <ImageView
@@ -47,20 +47,21 @@
     </LinearLayout>
 
     <ImageView
-        android:id="@+id/scan_iv"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_centerInParent="true"/>
+        android:id="@+id/scan_btn"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="30dp"/>
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:text="扫描以绑定学习机"
+        android:layout_marginTop="20dp"
+        android:layout_below="@id/scan_btn"
+        android:gravity="center"
+        android:text="扫码以绑定/登录学习机"
         android:textColor="#ffffff"
-        android:textSize="18sp"
-        android:layout_centerHorizontal="true"
-        android:layout_above="@id/scan_iv"/>
+        android:textSize="15sp" />
 
     <ImageView
         android:id="@+id/scan_iv_bg"
